# passengersim

./: .gitignore  .gitlab-ci  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: cli.md  index.md
docs/.overrides/: home.html
docs/.scripts/: _execute_notebooks.py  _generate_ref_pages.py
docs/API/: README.md  contrast.md  index.md  simulation.md  summary.md
docs/API/AirSim/: 00-AirSim.md  Airline.md  BookingCurves.md  Bucket.md  ChoiceModel.md  Demand.md  Fare.md  Generator.md  Leg.md  Path.md  PathClass.md
docs/API/Core/: 00-SimulationEngine.md  Airline.md  BookingCurves.md  Bucket.md  ChoiceModel.md  Demand.md  Fare.md  Generator.md  Leg.md  Path.md  PathClass.md  index.md
docs/API/database/: common-queries.md  index.md  tables.md
docs/Tutorials/: demo-3mkt-2carrier.ipynb  demo-3mkt-db.ipynb  demo-3mkt.ipynb  index.md  reading-data.ipynb
docs/Tutorials/3MKT/: 3mkt-01.ipynb  3mkt-02.ipynb  3mkt-03.ipynb  3mkt-04.ipynb  3mkt-05.ipynb  3mkt-06.ipynb  3mkt-07.ipynb  3mkt-08.ipynb  3mkt-09.ipynb  3mkt-10.ipynb  3mkt-11.ipynb  3mkt-12.ipynb  3mkt-50.ipynb  3mkt-98.ipynb  targets.py
docs/Tutorials/verification/: 3mkt-01.ipynb  3mkt-02.ipynb  3mkt-03.ipynb  3mkt-04.ipynb  3mkt-05.ipynb  3mkt-06.ipynb  (+3 more)
docs/colab/: demo-limited.md
docs/stylesheets/: extra.css
docs/user-guide/: counting-simulations.md  how-it-works.md  installation.md  randomness.md  rm-systems.md  untruncation.md  writing-configs.md
networks/: 3mkt.yaml
passengersim/: __init__.py  __main__.py  _logging.py  contrast.py  core.py  driver.py  logging.py  mp_driver.py  progressbar.py  pseudonym.py  reporting.py  snapshot.py  summary.py
passengersim/cli/: __init__.py  _app.py  info.py  multiplex.py  run.py
passengersim/config/: __init__.py  airlines.py  base.py  booking_curves.py  choice_model.py  database.py  demands.py  fares.py  frat5_curves.py  legs.py  load_factor_curves.py  named.py  outputs.py  paths.py  places.py  pretty.py  rm_steps.py  rm_systems.py  simulation_controls.py  snapshot_filter.py  todd_curves.py
passengersim/database/: common_queries.py  database.py  tables.py  write_demands.py
passengersim/extra/: bid_price_viz.py  forecast_viz.py  olympic_forecast.py
passengersim/networks/: 3mkt-2carrier.yaml  3mkt-alt.yaml  3mkt-aw-temp.yaml  3mkt-aw.yaml  3mkt-logit.yaml  3mkt.yaml  3mkt01.yaml
passengersim/reporting/: __init__.py  report.py
passengersim/rm_steps/: __init__.py
passengersim/utils/: __init__.py  codeview.py  si.py  targets.py  tempdir.py
simbywire/: __init__.py  database.py  driver.py  logging.py  summary.py
simbywire/config/: __init__.py  airlines.py  base.py  booking_curves.py  choice_model.py  database.py  demands.py  legs.py  named.py  paths.py  rm_steps.py  rm_systems.py  simulation_controls.py  snapshot_filter.py
simbywire/database/: __init__.py  common_queries.py  database.py  tables.py  write_demands.py
simbywire/networks/: 3mkt-2carrier.yaml  3mkt-alt.yaml  3mkt-aw.yaml  3mkt.yaml  3mkt01.yaml
simbywire/rm_steps/: __init__.py
simbywire/utils/: si.py
tests/: test_3mkt.py  test_3mkt_01.py  test_3mkt_08.py  test_3mkt_retrospective.py  test_loader.py
tests/test_3mkt/: test_3mkt.orig.yml  test_3mkt.yml  test_3mkt_2carrier.yml
tests/test_3mkt_01/: bookings_by_timeframe.csv  carriers.csv  demand_to_come.csv  fare_class_mix.csv  fig_carrier_load_factors.csv  fig_carrier_mileage.csv  fig_carrier_revenues.csv  fig_carrier_yields.csv  fig_fare_class_mix.csv  fig_leg_forecasts.csv  fig_od_fare_class_mix.csv  test_3mkt_01_fig_bookings_by_timeframe_AL1_False_.csv  test_3mkt_01_fig_bookings_by_timeframe_AL1_True_.csv  test_3mkt_01_fig_bookings_by_timeframe_False_False_.csv  test_3mkt_01_fig_bookings_by_timeframe_False_True_.csv  test_3mkt_01_fig_bookings_by_timeframe_False_Y5_.csv  test_3mkt_01_fig_bookings_by_timeframe_True_True_.csv  test_3mkt_01_fig_bookings_by_timeframe_True_Y5_.csv  test_3mkt_01_fig_load_factor_grouped_AL1_.csv  test_3mkt_01_fig_load_factor_grouped_False_.csv  test_3mkt_01_fig_load_factor_grouped_True_.csv
tests/test_3mkt_08/: bookings_by_timeframe.csv  carriers.csv  fare_class_mix.csv  fig_carrier_load_factors.csv  fig_carrier_mileage.csv  fig_carrier_revenues.csv  fig_carrier_yields.csv  fig_fare_class_mix.csv  fig_od_fare_class_mix.csv  test_3mkt_08_fig_bookings_by_timeframe_AL1_False_.csv  test_3mkt_08_fig_bookings_by_timeframe_AL1_True_.csv  test_3mkt_08_fig_bookings_by_timeframe_False_False_.csv  test_3mkt_08_fig_bookings_by_timeframe_False_True_.csv  test_3mkt_08_fig_bookings_by_timeframe_False_Y5_.csv  test_3mkt_08_fig_bookings_by_timeframe_True_False_.csv  test_3mkt_08_fig_bookings_by_timeframe_True_True_.csv  test_3mkt_08_fig_bookings_by_timeframe_True_Y5_.csv  test_3mkt_08_fig_leg_forecasts_mu_.csv  test_3mkt_08_fig_leg_forecasts_sigma_.csv
tests/test_3mkt_retrospective/: test_arbitrary_sql.csv  test_fig_bookings_by_timeframe.csv  test_fig_carrier_load_factors.csv  test_fig_carrier_revenues.csv  test_fig_fare_class_mix.csv
(+78 files in other folders)
