# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.1.0"
write_to = "simbywire/_version.py"

[project]
name = "simbywire"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest-regressions ~=2.4",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["simbywire*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["simbywire.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
simbywire = [
    "networks/*.yaml",
]

[metadata]
description = "User interface for AirSim"
author = "Atlanta Analytics LLC"
author_email = "jeff@newman.me"

[tool.ruff]
# Enable flake8-bugbear (`B`) and pyupgrade ('UP') rules.
select = ["E", "F", "B", "UP", "TID"]
fix = true
ignore-init-module-imports = true
line-length = 120
ignore = ["B905"]
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["simbywire"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # Ignore import violations in all `__init__.py` files
