# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.1.0"
write_to = "passengersim/_version.py"

[project]
name = "passengersim"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "addicty",
    "numpy",
    "pandas",
    "pydantic>=2.4",
    "pyyaml",
    "scipy",
    "typer",
]

[project.optional-dependencies]
test = [
    "altair>=5.0",
    "xmle",
    "pytest-regressions ~=2.4",
]
reporting = [
    "altair>=5.0",
    "xmle",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["passengersim*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["passengersim.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
passengersim = [
    "networks/*.yaml",
]

[metadata]
description = "User interface for PassengerSim"
author = "Passenger Simulation Labs, LLC"

[tool.ruff]
# Enable flake8-bugbear (`B`) and pyupgrade ('UP') rules.
select = ["E", "F", "B", "UP", "TID", "I001"]
fix = true
ignore-init-module-imports = true
line-length = 120
ignore = ["B905"]
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["passengersim"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # Ignore import violations in all `__init__.py` files
